--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,21 +1,16 @@
-@import-normalize;
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
+.appLogo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .appLogo {
+    animation: app-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.content {
+  flex: 1;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -26,11 +21,11 @@
   color: white;
 }
 
-.App-link {
+.appLink {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes app-logo-spin {
   from {
     transform: rotate(0deg);
   }
