--- a/src/app/MainLayout.module.scss
+++ b/src/app/MainLayout.module.scss
@@ -1,12 +1,5 @@
-.appLogo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .appLogo {
-    animation: app-logo-spin infinite 20s linear;
-  }
+.sidebar {
+  border-right: 1px solid white;
 }
 
 .content {
@@ -18,17 +11,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.appLink {
-  color: #61dafb;
-}
-
-@keyframes app-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
